<resources>
    <string name="app_name">RapidChat</string>
    <string name="need_a_new_account">REGISTER</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="default_status">Your status here </string>





        <string name="hello_world">Hello world!</string>
        <string name="action_settings">Settings</string>
        <string name="title_activity_log_in">LogIn</string>
        <string name="title_activity_register">Register</string>


        <string name="add_item">Add New Item</string>

        <!-- LogInActivity-->
        <string name="login_error_message">Please make sure you enter a username and password!</string>
        <string name="login_error_title">Checking</string>
        <string name="title_activity_chat">Chat</string>

        <!-- RegisterActivity-->
        <string name="error_fields_empty">Please make sure you enter display name, email and password!</string>
        <string name="error_incorrect_email_pass">Provide correct email and password with more than 6 characters.</string>

        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="title_activity_settings">Settings</string>

        <!-- Strings related to Settings -->

        <!-- Example General settings -->
        <string name="pref_header_general">General</string>

        <string name="pref_title_social_recommendations">Enable social recommendations</string>
        <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

        <string name="pref_title_display_name">Display name</string>
        <string name="pref_default_display_name">John Smith</string>

        <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
        <string-array name="pref_example_list_titles">
            <item>Always</item>
            <item>When possible</item>
            <item>Never</item>
        </string-array>
        <string-array name="pref_example_list_values">
            <item>1</item>
            <item>0</item>
            <item>-1</item>
        </string-array>

        <!-- Example settings for Data & Sync -->
        <string name="pref_header_data_sync">Data &amp; sync</string>

        <string name="pref_title_sync_frequency">Sync frequency</string>
        <string-array name="pref_sync_frequency_titles">
            <item>15 minutes</item>
            <item>30 minutes</item>
            <item>1 hour</item>
            <item>3 hours</item>
            <item>6 hours</item>
            <item>Never</item>
        </string-array>
        <string-array name="pref_sync_frequency_values">
            <item>15</item>
            <item>30</item>
            <item>60</item>
            <item>180</item>
            <item>360</item>
            <item>-1</item>
        </string-array>

        <string-array name="list_preference_entries">
            <item>Entry 1</item>
            <item>Entry 2</item>
            <item>Entry 3</item>
        </string-array>

        <string-array name="list_preference_entry_values">
            <item>1</item>
            <item>2</item>
            <item>3</item>
        </string-array>

        <string-array name="multi_select_list_preference_default_value" />

        <string name="pref_title_system_sync_settings">System sync settings</string>

        <!-- Example settings for Notifications -->
        <string name="pref_header_notifications">Notifications</string>

        <string name="pref_title_new_message_notifications">New message notifications</string>

        <string name="pref_title_ringtone">Ringtone</string>
        <string name="pref_ringtone_silent">Silent</string>

        <string name="pref_title_vibrate">Vibrate</string>
        <string name="title_activity_maps">Map</string>


        <!-- this for the maps stuff -->
        <string name="maps_api_key">AIzaSyDS_7wW4uddmY8KJ0ZoN0s57XeXH-Z5gwQ</string>

        <string name="sample_1">Sample 1</string>
        <string name="sample_2">Sample 2</string>

        <string name="details_1"><![CDATA[• One marker per fragment\n• Default layout]]></string>
        <string name="details_2"><![CDATA[• Any amount of markers per fragment\n• Custom layout\n• Custom initial position]]></string>

        <string name="item_1">Item 1</string>
        <string name="item_2">Item 2</string>

        <string name="lorem_ipsum">Description Thing</string>

        <string name="title_activity_decorators">Calendar with Decorators</string>
        <string name="title_activity_sidebar">sidebar</string>

        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="title_activity_tabbed">tabbed</string>
        <string name="section_format">Hello World from section: %1$d</string>










    <string name="settings">Settings</string>
    <string name="share">Share</string>

    <string name="test">Something</string>

    <string name="tap_here">Tap here to
                            \n read another depressing thought</string>

    <string name="title_developer_pref">Developer</string>
    <string name="summary_developer_pref">Vladyslav Pohrebniakov</string>
    <string name="summary_twitter_author_pref">\@Time4Depression</string>
    <string name="title_twitter_author_pref">Depressing thoughts by Twitter account</string>
    <string name="title_licenses_pref">Open source licenses</string>
    <string name="title_particles_pref">Show particles in background</string>
    <string name="title_about_category_pref">About</string>
    <string name="title_look_category_pref">Look</string>
    <string name="summary_about_pref">This is humor app. Don\'t be depressed.</string>

    <string name="no_internet">Is your Internet depressed too? Check its connection.</string>

    <string name="appwidget_text_loading">Loading…</string>
    <string name="next">Next</string>
    <string name="add_widget">Add widget</string>
    <string name="configure_app_widget_background_color">Background color</string>
    <string name="configure_app_widget_button_color">Button text color</string>
    <string name="configure_app_widget_text_color">Text color</string>
    <string name="preview_widget">Preview</string>
    <string name="preview_widget_text">Depressed widget</string>
    <string name="preview_widget_button">Depressed button</string>
    <string name="pref_title_themes">Use dark theme</string>
    <string name="pref_title_rate_the_app">Rate this app</string>
    <string name="pref_title_font">Font</string>
    <string name="text_size_title">Text size</string>
    <string name="text_size_title_widget">Text size of widget</string>
    <string name="send_to">Share</string>

    <string-array name="pref_font_list_titles">
        <item>monospace</item>
        <item>casual</item>
        <item>cursive</item>
        <item>sans-serif</item>
        <item>sans-serif-condensed</item>
        <item>sans-serif-smallcaps</item>
        <item>serif</item>
        <item>serif-monospace</item>
    </string-array>
    <string-array name="widget_colors">
        <item>Dark</item>
        <item>Light</item>
        <item>Transparent</item>
        <item>Translucent Dark</item>
        <item>Translucent Light</item>
        <item>Pink</item>
        <item>Yellow</item>
        <item>Black</item>
        <item>White</item>
        <item>Red</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Orange</item>
        <item>Brown</item>
        <item>Grey</item>
        <item>Blue Grey</item>
        <item>Indigo</item>
        <item>Green</item>
    </string-array>






</resources>
