<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/preview_area"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preview_area_height"
                android:background="#000"
                android:elevation="3dp"
                android:gravity="center">

                <RelativeLayout
                    android:id="@+id/preview_background"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/preview_widget_height"
                    android:layout_margin="@dimen/widget_preview_margin"
                    android:background="@color/colorWidgetDark">

                    <TextView
                        android:id="@+id/preview_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/small_margin"
                        android:text="@string/preview_widget_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/preview_button_text"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/preview_widget_button"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:paddingTop="@dimen/activity_margin"
                android:text="@string/configure_app_widget_background_color"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorAccent" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerBackgroundColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:text="@string/configure_app_widget_button_color"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorAccent" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerButtonColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:text="@string/configure_app_widget_text_color"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorAccent" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin">

                <Button
                    android:id="@+id/addBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_widget" />

                <Button
                    android:id="@+id/previewBtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/preview_widget" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>