<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dashtechnologies.inspire.activities.MainTwitterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_buttons_height"
            android:fadeScrollbars="false"
            android:scrollbarSize="4dp"
            android:scrollbarThumbVertical="@color/colorAccent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/thought"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/activity_margin"
                    android:autoLink="web"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    tools:text="@string/test" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="@dimen/activity_margin"
                    android:text="@string/tap_here"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_buttons_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/share"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/bottom_buttons_height"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/share" />

        <Button
            android:id="@+id/settings"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/bottom_buttons_height"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/settings" />

    </LinearLayout>

</RelativeLayout>
